deployment-contratacao.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: contratacao
  labels:
    app: contratacao
    version: "1.1"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: contratacao
      version: "1.1"
  template:
    metadata:
      labels:
        app: contratacao
        version: "1.1"
    spec:
      containers:
      - name: contratacao-container
        image: igoragueme/contratacao:1.1
        resources:
          limits:
            memory: "200Mi"
          requests:
            memory: "100Mi"
        ports:
        - containerPort: 8080
