deployment-contratos-v2.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: contratos-v2.0
  labels:
    app: contratos
    version: "2.0"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: contratos
      version: "2.0"
  template:
    metadata:
      labels:
        app: contratos
        version: "2.0"
    spec:
      containers:
      - name: contratos-container
        image: igoragueme/contratos:2.0
        resources:
          limits:
            memory: "200Mi"
          requests:
            memory: "100Mi"        
        ports:
        - containerPort: 8080
