service-contratacao.yml
apiVersion: v1
kind: Service
metadata:
  name: contratacao
  labels:
    app: contratacao
    service: contratacao
spec:
  type: NodePort
  ports:
  - port: 80
    name: http
    targetPort: 8080
  selector:
    app: contratacao
