service-contratos.yml
apiVersion: v1
kind: Service
metadata:
  name: contratos
  labels:
    app: contratos
    service: contratos
spec:
  ports:
  - port: 80
    name: http
    targetPort: 8080
  selector:
    app: contratos
