vs-dr-contratacao.yml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: contratos-destinationrule
spec:
  host: contratos
  subsets:
  - name: v1
    labels:
      version: "1.0"
  - name: v2
    labels:
      version: "2.0"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: contratos-vs
spec:
  hosts:
    - contratos
  http:
  - route:
    - destination:
        host: contratos
        subset: v1
      weight: 0
    - destination:
        host: contratos
        subset: v2
      weight: 100
